# artwork-matcher

./: .gitignore  .guardignore  AGENTS.md  DELEGATE.md  README.md  docker-compose.dev.yml  docker-compose.yml  justfile
data/: .gitkeep
data/features/: .gitkeep
data/index/: .gitkeep
data/objects/: .gitkeep
data/pictures/: .gitkeep
docs/api/: README.md  embeddings_service_api_spec.md  gateway_service_api_spec.md  geometric_service_api_spec.md  project_scaffolding_setup_guide.md  search_service_api_spec.md  uniform_api_structure.md
docs/decisions/: confidence-scoring-penalties.md
docs/deployment/: AWS_DEPLOYMENT_GUIDE.md
docs/devlog/: embeddings-service-implementation.md  gateway-service-implementation.md  geometric-service-implementation.md  rijksmuseum-downloader-implementation.md  search-service-implementation.md
docs/estimations/: AWS_HOSTING_COSTS.md
docs/implementation-guides/: common_issues_and_fixes.md  config_pattern.md  cors_implementation_guide.md  dockerfile_uv_lockfile_pattern.md  evaluation_implementation_guide.md  fastapi_service_template.md  fastapi_testing_guide.md  performance_testing_guide.md  service_lifecycle_test_pattern.md  service_testing_guide.md
docs/implementation-prompts/: gateway-service-implementation-task.md  geometric-service-implementation-task.md  search-service-implementation-task.md
docs/performance/: embedding_service_perf_testing.md  testing-methodology.md
docs/plans/: geometric-service-implementation-plan-part1.md  geometric-service-implementation-plan-part2.md  geometric-service-performance-tests.md  initial-research.md
docs/review/: architecture-review.md  code_design_review.md  tradeoff_analysis.md
libs/service-commons/: pyproject.toml
libs/service-commons/src/service_commons/: __init__.py  config.py  exceptions.py  logging.py
reports/performance/: embedding_service_performance.md  gateway_service_performance.md  geometric_service_performance.md  search_service_performance.md
services/embeddings/: .gitignore  Dockerfile  README.md  config.yaml  justfile  pyproject.toml
services/embeddings/src/embeddings_service/: __init__.py  app.py  config.py  logging.py  main.py  schemas.py
services/embeddings/src/embeddings_service/core/: __init__.py  exceptions.py  lifespan.py  state.py
services/embeddings/src/embeddings_service/routers/: __init__.py  embed.py  health.py  info.py
services/embeddings/tests/: __init__.py  conftest.py  factories.py  test_placeholder.py
services/embeddings/tests/integration/: __init__.py  conftest.py  test_embedding_consistency.py  test_endpoints.py
services/embeddings/tests/manual/: test_service_lifecycle.sh
services/embeddings/tests/performance/: __init__.py  conftest.py  generators.py  metrics.py  test_performance.py
services/embeddings/tests/unit/: __init__.py  conftest.py  test_config.py  test_schemas.py
services/embeddings/tests/unit/routers/: __init__.py  test_embed.py  test_health.py  test_info.py
services/gateway/: Dockerfile  README.md  config.docker.yaml  config.yaml  justfile  pyproject.toml
services/gateway/src/gateway/: __init__.py  app.py  config.py  logging.py  main.py  schemas.py
services/gateway/src/gateway/clients/: __init__.py  base.py  embeddings.py  geometric.py  search.py  storage.py
services/gateway/src/gateway/core/: __init__.py  exceptions.py  lifespan.py  state.py
services/gateway/src/gateway/routers/: __init__.py  health.py  identify.py  info.py  objects.py
services/gateway/static/: index.html
services/gateway/tests/: __init__.py  factories.py  test_placeholder.py
services/gateway/tests/integration/: __init__.py  conftest.py  test_consistency.py  test_pipeline.py  test_storage_integration.py
services/gateway/tests/manual/: test_service_lifecycle.sh
services/gateway/tests/performance/: __init__.py  conftest.py  generators.py  metrics.py  test_performance.py
services/gateway/tests/unit/: __init__.py  conftest.py  test_config.py  test_schemas.py
services/gateway/tests/unit/clients/: conftest.py  test_base.py  test_embeddings.py  test_geometric.py  test_search.py  test_storage.py
services/gateway/tests/unit/routers/: __init__.py  test_health.py  test_identify.py  test_info.py  test_objects.py
services/geometric/: Dockerfile  README.md  config.yaml  justfile  pyproject.toml
services/geometric/tests/: __init__.py  factories.py  test_placeholder.py
services/search/: .gitignore  Dockerfile  README.md  config.yaml  justfile  pyproject.toml
services/search/src/search_service/: __init__.py  app.py  config.py  logging.py  main.py  schemas.py
services/search/src/search_service/core/: __init__.py  exceptions.py  lifespan.py  state.py
services/search/src/search_service/routers/: __init__.py  health.py  index.py  info.py  search.py
services/search/src/search_service/services/: __init__.py  faiss_index.py
services/search/tests/: conftest.py  factories.py  test_placeholder.py
services/search/tests/integration/: __init__.py  conftest.py  test_critical_issues.py  test_deterministic_search.py  test_endpoints.py  test_error_responses.py  test_search_behavior.py
services/search/tests/manual/: test_service_lifecycle.sh
services/search/tests/performance/: __init__.py  conftest.py  generators.py  metrics.py  test_performance.py
services/search/tests/unit/: __init__.py  conftest.py  test_config.py  test_faiss_index.py
services/search/tests/unit/routers/: __init__.py  test_health.py  test_index.py  test_info.py  test_search.py
services/storage/: Dockerfile  README.md  config.yaml  justfile  pyproject.toml  pyrightconfig.json
services/storage/tests/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_integration.py
tools/: build_index.py  evaluate.py  justfile  justfile-diff.sh  pyproject.toml  run_evaluation.py  test_all_lifecycles.sh  verify_evaluation.py
tools/downloader/: README.md  __init__.py  config.yaml  download_data.py
tools/evaluation/: __init__.py  client.py  data.py  metrics.py  models.py  report.py
tools/tests/: test_evaluate_metrics.py  test_evaluation_client.py  test_evaluation_data.py
(+73 files in other folders)
